# bgt60tr13c_processing

./: .gitignore  LICENSE  README.md  TestNoteBook.ipynb
radar_sdk/: CMakeLists.txt
radar_sdk/doc/html/: 2_d_m_t_i_8h.html  2_d_m_t_i_8h__dep__incl.map  2_d_m_t_i_8h__dep__incl.md5  2_d_m_t_i_8h__incl.map  2_d_m_t_i_8h__incl.md5  _advanced_motion_sensing_8h.html  _advanced_motion_sensing_8h__incl.map  _advanced_motion_sensing_8h__incl.md5  _algo_8h.html  _algo_8h__incl.map  _algo_8h__incl.md5  _angle_capon_8h.html  _angle_capon_8h__dep__incl.map  _angle_capon_8h__dep__incl.md5  _angle_capon_8h__incl.map  _angle_capon_8h__incl.md5  _angle_monopulse_8h.html  _angle_monopulse_8h__dep__incl.map  _angle_monopulse_8h__dep__incl.md5  _angle_monopulse_8h__incl.map  _angle_monopulse_8h__incl.md5  _avian_8h.html  _avian_8h__incl.map  _avian_8h__incl.md5  _base_8h.html  _base_8h__incl.map  _base_8h__incl.md5  _c_o_m_port_8h.html  _c_o_m_port_8h.js  _c_o_m_port_8h__incl.map  _c_o_m_port_8h__incl.md5  _complex_8h.html  _complex_8h__dep__incl.map  _complex_8h__dep__incl.md5  _complex_8h__incl.map  _complex_8h__incl.md5  _cube_8h.html  _cube_8h__dep__incl.map  _cube_8h__dep__incl.md5  _cube_8h__incl.map  (+588 more)
radar_sdk/doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+73 more)
radar_sdk/examples/: CMakeLists.txt
radar_sdk/examples/c/BGT24ATR22/raw_data/: CMakeLists.txt
radar_sdk/examples/c/BGT60ATR24C/continuous_wave/: CMakeLists.txt
radar_sdk/examples/c/BGT60ATR24C/raw_data/: CMakeLists.txt
radar_sdk/examples/c/BGT60LTR11AIP/raw_data/: CMakeLists.txt
radar_sdk/examples/c/BGT60TR13C/continuous_wave/: CMakeLists.txt
radar_sdk/examples/c/BGT60TR13C/motion_angle/: CMakeLists.txt  motion_angle.c
radar_sdk/examples/c/BGT60TR13C/presence_detection/: CMakeLists.txt  presence_detection.c
radar_sdk/examples/c/BGT60TR13C/range_doppler_map/: CMakeLists.txt
radar_sdk/examples/c/BGT60TR13C/raw_data/: CMakeLists.txt
radar_sdk/examples/c/BGT60TR13C/segmentation/: CMakeLists.txt  segmentation.c
radar_sdk/examples/c/BGT60UTR11AIP/continuous_wave/: CMakeLists.txt
radar_sdk/examples/c/BGT60UTR11AIP/raw_data/: CMakeLists.txt  (+1 more)
radar_sdk/examples/c/common/: CMakeLists.txt  json.cpp
radar_sdk/examples/matlab/BGT60TR13C/: presence_detection.m
radar_sdk/examples/py/: requirements.txt
radar_sdk/examples/py/BGT24ATR22/: raw_data.py  raw_data_plotter.py
radar_sdk/examples/py/FMCW/: presence_detection.py  raw_data.py
radar_sdk/libs/macos/: liblib_avian.dylib  libradar_sdk.dylib  libsdk_advanced_motion_sensing.dylib  libsdk_algo.dylib  libsdk_avian.dylib  libsdk_base.dylib  libsdk_cw.dylib  libsdk_fmcw.dylib  libsdk_ltr11.dylib  libsdk_mimose.dylib  libsdk_motionangle.dylib  libsdk_presence_sensing.dylib  libsdk_radar.dylib  libsdk_radar_segmentation.dylib  libsensor_sdk.dylib  libstrata_shared.dylib
radar_sdk/libs/win32_x64/: DeviceControlM.mexw64  DeviceControlM_Mimose.mexw64  lib_avian.lib  lib_smartar.lib  radar_sdk.lib  sdk_advanced_motion_sensing.lib  sdk_algo.lib  sdk_avian.lib  sdk_base.lib  sdk_cw.lib  sdk_fmcw.lib  sdk_ltr11.lib  sdk_mimose.lib  sdk_motionangle.lib  sdk_presence_sensing.lib  sdk_radar.lib  sdk_radar_device_common.lib  sdk_radar_segmentation.lib  sdk_util.lib  sensor_sdk.lib  strata_shared.lib
radar_sdk/python_wheels/: ifxradarsdk-3.6.4+4b4a6245-py3-none-macosx_10_14_universal2.whl  ifxradarsdk-3.6.4+4b4a6245-py3-none-win_amd64.whl
radar_sdk/sdk/: CMakeLists.txt
radar_sdk/sdk/c/ifxAvian/: DeviceControl.cpp
radar_sdk/sdk/c/ifxBase/: CMakeLists.txt
radar_sdk/sdk/c/ifxComPort/: COMPort.h
radar_sdk/sdk/c/ifxFmcw/: DeviceFmcw.h  DeviceFmcwBase.cpp  DeviceFmcwCWrapper.cpp  DeviceFmcwTypes.c  DeviceFmcwTypes.h
radar_sdk/sdk/c/ifxMimose/: DeviceMimose.cpp  DeviceMimose.h  DeviceMimoseBase.cpp  DeviceMimoseConstants.hpp  DeviceMimoseImpl.cpp  DeviceMimoseRegisterConfigurator.cpp  DeviceMimoseRegisterConfigurator.hpp  DeviceMimoseTypes.h
radar_sdk/sdk/c/ifxMotionAngle/: MotionAngle.h
radar_sdk/sdk/c/ifxRadarDeviceCommon/: RadarDeviceCommon.h
radar_sdk/sdk/matlab/: CMakeLists.txt
radar_sdk/sdk/matlab/ContextWrapper/: MWrapHelpers.c  MWrapHelpers.h  MWrapInternalCommands.c  Octave5Compatibility.c  Octave5Compatibility.h
radar_sdk/sdk/matlab/MimoseSDKMEXWrapper/: BGT24ATR22_example_settings_FusionGUI.json  DeviceControlM_Mimose.c  MatlabWrapperExample.m
radar_sdk/sdk/matlab/RadarSDKMEXWrapper/: CMakeLists.txt  DeviceControlM.c  MatlabWrapperExample.m  MatlabWrapperExampleContinuousWave.m
radar_sdk/sdk/py/: CMakeLists.txt  generate_exceptions.py
radar_sdk/sdk/py/wrapper_radarsdk/: CMakeLists.txt  pyproject.toml
(+47 files in other folders)
